--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-     AWS_DEFAULT_REGION: "us-central1"
+     AWS_DEFAULT_REGION: "us-east1"
      IMAGE_REPO_NAME: "adiyodi_assignment3_ecr"
      AWS_ACCOUNT_ID: "211125509771"
 
