--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -2,20 +2,17 @@ version: 0.2
 
 env:
   variables:
-     AWS_DEFAULT_REGION: "us-east1"
+     AWS_DEFAULT_REGION: "us-east-1"
      IMAGE_REPO_NAME: "adiyodi_assignment3_ecr"
      AWS_ACCOUNT_ID: "211125509771"
 
 phases:
-  #install:
-    #runtime-versions:
-      #docker: 20
   pre_build:
     commands:
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
       - echo Logging in to Amazon ECR...
-      - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
   build:
     commands:
       - echo Build started on `date`
