--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-     AWS_DEFAULT_REGION: "us-east-2"
+     AWS_DEFAULT_REGION: "us-east-2 "
      IMAGE_REPO_NAME: "adiyodi_assignment3_ecr"
      AWS_ACCOUNT_ID: "211125509771"
 
@@ -24,6 +24,6 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-      - printf '[{"name":"PY-APP","imageUri":"%s"}]' $CONTAINER_NAME $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG > imagedefinitions.json
+      - printf '[{"name":"APP-PY","imageUri":"%s"}]' $CONTAINER_NAME $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG > imagedefinitions.json
 artifacts:
     files: imagedefinitions.json
