--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,7 +14,7 @@ steps:
     args: 
       - '-c'
       - |
-        gcloud run deploy nodejs-app \
+        gcloud run deploy python-app \
           --image=us-east1-docker.pkg.dev/devops-lab-419615/adiyodi-assignment-3ssignment-3:$COMMIT_SHA \
           --platform=managed \
           --region=us-east-1 \
@@ -26,4 +26,3 @@ images:
   - 'us-east1-docker.pkg.dev/devops-lab-419615/adiyodi-assignment-3ssignment-3:$COMMIT_SHA'
 options:
   defaultLogsBucketBehavior: 'REGIONAL_USER_OWNED_BUCKET'
-  
