--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,11 @@
 # Build the container Image
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'us-docker.pkg.dev/devops-lab-419615/adiyodi-assignment-3:$COMMIT_SHA', '.']
+    args: ['build', '-t', 'gcr.io/devops-lab-419615/adiyodi-assignment-3:$COMMIT_SHA', '.']
 
 # Push the container Image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-docker.pkg.dev/devops-lab-419615/adiyodi-assignment-3:$COMMIT_SHA']
+    args: ['push', 'gcr.io/devops-lab-419615/adiyodi-assignment-3:$COMMIT_SHA']
 
 # Deploy the Docker container to Google Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -14,13 +14,13 @@ steps:
       - '-c'
       - |
         gcloud run deploy python-app \
-          --image=us-docker.pkg.dev/devops-lab-419615/adiyodi-assignment-3:$COMMIT_SHA \
+          --image=gcr.io/devops-lab-419615/adiyodi-assignment-3:$COMMIT_SHA \
           --platform=managed \
           --region=us-east-1 \
           --port=3000 \
           --allow-unauthenticated
 
 images:
-  - 'us-docker.pkg.dev/devops-lab-419615/adiyodi-assignment-3:$COMMIT_SHA'
+  - 'gcr.io/devops-lab-419615/adiyodi-assignment-3:$COMMIT_SHA'
 options:
   defaultLogsBucketBehavior: 'REGIONAL_USER_OWNED_BUCKET'
